force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Order__c</fullName>
    <description>Administrators populate this number field to determine the display order of this ID Document Type selection on the ID Scan page in Customer Engagement.</description>
    <inlineHelpText>Enter a number to determine the display order of the ID Document.</inlineHelpText>
    <label>Display Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>