force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__External_Id_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Id_Document_Name__c</fullName>
    <description>Administrators populate this optional text field to display the external names that Customer Portal users should see in place of the ID Document Type name.</description>
    <inlineHelpText>Enter the ID Document name to display in place of the ID Document Type name.</inlineHelpText>
    <label>External ID Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>