force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Id_Document_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Id_Document_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and is automatically set when the Platform package is installed. This field identifies the ID document requirements for this identification document type.</description>
    <label>Id Document Requirement</label>
    <referenceTo>LLC_BI__Id_Document_Requirement__c</referenceTo>
    <relationshipLabel>Id Document Types</relationshipLabel>
    <relationshipName>Id_Document_Types</relationshipName>
    <type>Lookup</type>
</CustomField>