force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__ID_Document_Sides__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ID_Document_Sides__c</fullName>
    <description>Administrators populate this number field to determine how many sides need to be captured based on the ID Document type.</description>
    <inlineHelpText>Select the ID Document type to help the system determine how many sides need to be captured.</inlineHelpText>
    <label>ID Document Sides</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>