force-app/main/default/objects/LLC_BI__Id_Document_Type__c/fields/LLC_BI__Placeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Placeholder_Name__c</fullName>
    <description>Administrators populate this text field to store the name of an existing Account Document Placeholder that ID Scan uses to store the submitted photo of an ID Document</description>
    <inlineHelpText>Enter the name of the placeholder.</inlineHelpText>
    <label>Placeholder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>