force-app/main/default/objects/LLC_BI__Id_Document_Type__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>